# HelixSnail

./: Cargo.toml  LICENSE  README.md  katex-header.html
benches/: solver_bench.rs
src/: helix_error.rs  lib.rs
src/linear_algebra/: linear_solvers.rs  math.rs  mod.rs
src/linear_algebra/linear_solvers/: lu_solvers.rs  mod.rs  qr_solvers.rs
src/nonlinear_solver/: delta_control.rs  dogleg.rs  hybrid_tr_dogleg_solver.rs  mod.rs  newton_bb_solver.rs  tr_dogleg_solver.rs
tests/: broyden.rs  cheby_quad.rs  newton.rs
