[package]
name = "helix_snail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = {version = "0.2.14", features = ["libm"]}
log = {version = "0.4.14", default-features = false}
anyhow = {version="1.0.53", default-features=false}

[features]
linear_algebra = []

[dev-dependencies]
env_logger = {version = "0.9.0", default-features = false}
paste = {version = "1.0.6"}