[package]
name = "helix_snail"
version = "0.1.0"
authors = ["rcarson3 <rac428@cornell.edu>"]
license = "MIT"
readme = "README.md"
edition = "2021"

repository = "https://github.com/rcarson3/HelixSnail"

description = "A nonlinear solver library for small system sizes and meant for no-std environments."

keywords = ["nonlinear-solver", "trust-region", "dogleg", ""]
categories = ["algorithms",  "no-std", "mathematics",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = {version = "0.2.14", features = ["libm"]}
log = {version = "0.4.14", default-features = false}

[features]
linear_algebra = []

[dev-dependencies]
env_logger = {version = "0.11.5", default-features = false}
paste = {version = "1.0.6"}
# Only use this for bench tests as this takes up way too much time to compile
divan = {version="0.1.14"}
[[bench]]
name = "solver_bench"
harness = false
# # These options are what provides the best performance
[profile.bench]
opt-level = 3
debug = false
lto = 'fat'
codegen-units = 1
incremental = false

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "katex-header.html"]